[package]
name = "ttparser"
version = "0.1.0"
readme = "readme.md"
description = " Parse terminal themes effortlessly."
edition = "2021"
license = "GPL-3.0-or-later"
license-file = "LICENSE"
keywords = ["terminal", "theme", "parser", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["cargo"] }
regex = "1.10.2"
toml = "0.8.8"
